# CryptoETL

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
airflow/: airflow.cfg  standalone_admin_password.txt
airflow/dags/: eth_daily_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: daily_candle.sql  schema.yml
scripts/: app.py  extract.py
